--- a/LearnSphere/LearnSphere/LearnSphere.csproj
+++ b/LearnSphere/LearnSphere/LearnSphere.csproj
@@ -26,6 +26,9 @@
     <EmbeddedResource Update="View\PageCursos.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
+    <EmbeddedResource Update="View\PageCursosAdquiridos.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+    </EmbeddedResource>
     <EmbeddedResource Update="View\PageHome.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
