--- a/LearnSphere/LearnSphere.Android/LearnSphere.Android.csproj
+++ b/LearnSphere/LearnSphere.Android/LearnSphere.Android.csproj
@@ -137,4 +137,9 @@
     <AndroidResource Include="Resources\drawable\pesquisar.png" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.CSharp.targets" />
+  <ProjectExtensions>
+    <VisualStudio>
+      <UserProperties XamarinHotReloadGenericExceptionInfoBarLearnSphereAndroidHideInfoBar="True" />
+    </VisualStudio>
+  </ProjectExtensions>
 </Project>
