--- a/LearnSphere/LearnSphere/LearnSphere.csproj
+++ b/LearnSphere/LearnSphere/LearnSphere.csproj
@@ -38,6 +38,9 @@
     <EmbeddedResource Update="View\PageCursosAdquiridos.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
+    <EmbeddedResource Update="View\PageCursosValidar.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+    </EmbeddedResource>
     <EmbeddedResource Update="View\PageHome.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
