--- a/LearnSphere/LearnSphere/LearnSphere.csproj
+++ b/LearnSphere/LearnSphere/LearnSphere.csproj
@@ -53,6 +53,9 @@
     <EmbeddedResource Update="View\PagePublicar.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
+    <EmbeddedResource Update="View\PageValidarCurso.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+    </EmbeddedResource>
     <EmbeddedResource Update="View\SearchPage.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
