--- a/LearnSphere/LearnSphere.Android/LearnSphere.Android.csproj
+++ b/LearnSphere/LearnSphere.Android/LearnSphere.Android.csproj
@@ -141,6 +141,9 @@
   <ItemGroup>
     <AndroidResource Include="Resources\drawable\LearnSphere.png" />
   </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\drawable\admin.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.CSharp.targets" />
   <ProjectExtensions>
     <VisualStudio>
